--- a/src/components/main.css
+++ b/src/components/main.css
@@ -1,89 +1,130 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400&display=swap');
 
 body {
-    background-image: linear-gradient(120deg, #f6d365 0%, #fda085 100%);
-    color: white;
-    font-family: "Poppins", sans-serif;
-    min-height: 100vh;
-    font-family: 'Poppins', sans-serif;
+   background-image: linear-gradient(120deg, #f6d365 0%, #fda085 100%);
+   color: white;
+   font-family: "Poppins", sans-serif;
+   min-height: 100vh;
+   font-family: 'Poppins', sans-serif;
 }
 
-input:focus{
-    outline: none;
-}
-select:focus{
-    outline: none;
+input:focus {
+   outline: none;
 }
 
-.main-container{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
+select:focus {
+   outline: none;
 }
 
-.container{
-    width: 30vw;
-    height: 80vh;
+.main-container {
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   height: 100vh;
 }
 
-.heading{
-    text-align: center;
+.container {
+   width: 30vw;
+   height: 80vh;
+}
+
+.heading {
+   text-align: center;
 }
 
 li {
-    list-style: none;
-}
-.todo-input{
-    width: 100%;
-    height: 2.5rem;
-    padding: 0.5rem;
-    border-radius: 9px;
-    border: none;
+   list-style: none;
 }
 
-.btn{
-    height: 2.5rem;
-    position: absolute;
-    right: 0px;
-    border-radius: 5px;
-    border: none;
-    padding-inline: 1rem;
-    background-color:#fda085;
-    transition: 0.1s ease-in-out;
+.todo-input {
+   width: 100%;
+   height: 2.5rem;
+   padding: 0.5rem;
+   border-radius: 9px;
+   border: none;
 }
 
-.btn:hover{
-    background-color:#fd663c;
+.btn {
+   height: 2.5rem;
+   position: absolute;
+   right: 0px;
+   border-radius: 5px;
+   border: none;
+   padding-inline: 1rem;
+   background-color: #fda085;
+   transition: 0.1s ease-in-out;
+}
+
+.btn:hover {
+   background-color: #fd663c;
 
 }
 
-.inputs{
-    position: relative;
-    margin-top: 1rem;
-    display: flex;
+.inputs {
+   position: relative;
+   margin-top: 1rem;
+   display: flex;
 }
 
-.select{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-top: 1rem;
-    padding: 1rem;
+.select {
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   margin-top: 1rem;
+   padding: 1rem;
 }
 
-select{
-    padding: 0.5rem;
-    border-radius: 10px;
+select {
+   padding: 0.5rem;
+   border-radius: 10px;
 }
 
-.todocontainer{
-    display:flex;
-    justify-content: center;
-    margin-top: 3rem;
+.todocontainerparent {
+   display: flex;
+   justify-content: center;
+   margin-top: 3rem;
 }
 
-.list{
-    font-size: 2rem;
-    color: black;
+.list {
+   font-size: 2rem;
+   color: black;
+   min-width: 12rem;
+}
+
+.buttons {
+   margin: 1rem;
+   display: flex;
+   gap: 20px;
+   cursor: pointer;
+}
+
+
+
+.list-items {
+   display: flex;
+   justify-content: center;
+   align-items: center;
+
+}
+
+button{
+   background-color: none;
+}
+
+.iconBtn{
+   border: none;
+   background: none;
+   cursor: pointer;
+}
+
+.iconBtnDone{
+ 
+   text-decoration: line-through;
+   opacity: 0.5;
+}
+
+.icon-btn{
+   background: none;
+   border: none;
+   cursor: pointer;
 }
